<resources>
    <string name="app_name">Oopsie Card</string>
    <string name="textview">TextView</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="use_oopsie">Use Oopsie</string>
    <string name="oopsie_card">Oopsie Card</string>
</resources>